--- a/.github/workflows/ingest-hmt-spend-data.yml
+++ b/.github/workflows/ingest-hmt-spend-data.yml
@@ -33,3 +33,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Run data ingestion script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python scripts/fetch_hmt_spend_data.py --start "${{ github.event.inputs.start }}" -- end "${{ github.event.inputs.end }}"
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github
+          git add data/hmt_spend/
+          git commit -m "Update HMT spend data" || echo "No changes to commit"
+          git push origin HEAD:main || echo "No changes to push"
+
