--- a/.github/workflows/ingest-hmt-spend-data.yml
+++ b/.github/workflows/ingest-hmt-spend-data.yml
@@ -43,7 +43,14 @@ jobs:
       - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github
-          git add data/*
-          git commit -m "Update HMT spending data" || echo "No changes to commit"
-          git push origin HEAD:main || echo "No changes to push"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit data changes (if any)
+        run: |
+          git add data/**
+          if ! git diff --cached --quiet; then
+            git commit -m "chore(data): update HMT spending data"
+            git push origin HEAD:${GITHUB_REF_NAME}
+          else
+            echo "No changes to commit"
+          fi
